# Neural-Net-Playground

./: CMakeLists.txt  README.md
src/: dataset.cpp  dataset.hpp  heatmap.cpp  heatmap.hpp  linechart.cpp  linechart.hpp  main.cpp  nn.cpp  nn.hpp  playground.cpp  playground.hpp  state.hpp  test_dataset.cpp  test_feature.cpp  test_nn.cpp
